deployment/k8s-init/ingress-nginx/test/http-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpd
  name: httpd
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: httpd
  type: ClusterIP
